--- a/index.html
+++ b/index.html
@@ -3,10 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="shortcut icon" href="src/images/icon.png" type="image/x-icon">
+
+    <!-- Google Fonts -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- /Google Fonts -->
+
+    <!-- Script -->
+    <script src="src/javascript/index.js" defer></script>
+    <!-- /Script -->
+
     <title>Projeto Pousada</title>
 </head>
 <body>
-    <h1>Hello, World</h1>
-    <h2>Hello, World</h2>
+    <header>
+
+        <div class="interface">
+
+            <section class="logo">
+                <!-- <img src="src/images/icon-logo-white.png" alt=""> -->
+                <a href="#hero-site">LOGO</a>
+            </section>
+
+            <section class="menu-desktop">
+                <nav>
+                    <ul>
+                        <li><a href="#hero-site">Início</a></li>
+                        <li><a href="#">Sobre</a></li>
+                        <li><a href="#">Quartos</a></li>
+                        <li><a href="#">Serviços</a></li>
+                        <li><a href="#">Galeria</a></li>
+                        <li><a href="#">Atrações</a></li>
+                        <li><a href="#">Contato</a></li>
+                    </ul>
+                </nav>
+            </section>
+
+            <section class="btn-reservar">
+                <a href="#">
+                    <button>Reservar</button>
+                </a>
+            </section>
+        </div>
+
+    </header>
+
+    <section class="hero-site" id="hero-site">
+
+        <div class="interface">
+
+            <div class="txt-hero">
+                <h1>Suas férias perfeitas <span>começam aqui</span></h1>
+            </div>
+
+        </div>
+
+    </section>
+
+    
 </body>
 </html>
