--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <nav>
                     <ul>
                         <li><a href="#hero-site">Início</a></li>
-                        <li><a href="#">Sobre</a></li>
+                        <li><a href="#sobre">Sobre</a></li>
                         <li><a href="#">Quartos</a></li>
                         <li><a href="#">Serviços</a></li>
                         <li><a href="#">Galeria</a></li>
@@ -63,6 +63,17 @@
 
     </section>
 
-    
+    <section class="sobre" id="sobre">
+
+        <div class="interface">
+
+            <div class="txt-sobre">
+                <h1>Quem nós somos?</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed mollitia ratione perspiciatis at dolore nam eius unde esse odit, accusantium numquam quos quaerat explicabo! Vitae repellendus iste laborum assumenda sed. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatem hic odit eum dicta totam? Minus debitis voluptatem vel error omnis nemo. Quas corporis officiis in unde expedita magnam vero!</p>
+            </div>
+
+        </div>
+
+    </section>
 </body>
 </html>
