--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <ul>
                         <li><a href="#hero-site">Início</a></li>
                         <li><a href="#sobre">Sobre</a></li>
-                        <li><a href="#">Quartos</a></li>
+                        <li><a href="#quartos">Quartos</a></li>
                         <li><a href="#">Serviços</a></li>
                         <li><a href="#">Galeria</a></li>
                         <li><a href="#">Atrações</a></li>
@@ -71,6 +71,44 @@
                 <h1>Quem nós somos?</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed mollitia ratione perspiciatis at dolore nam eius unde esse odit, accusantium numquam quos quaerat explicabo! Vitae repellendus iste laborum assumenda sed. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatem hic odit eum dicta totam? Minus debitis voluptatem vel error omnis nemo. Quas corporis officiis in unde expedita magnam vero!</p>
             </div>
+
+        </div>
+
+    </section>
+
+    <section class="quartos" id="quartos">
+
+        <div class="interface">
+
+            <article class="itens-container">
+                <div class="txt-itens">
+                    <h2>Os melhores <span>quartos</span></h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum enim labore a fuga voluptate iure harum molestiae, expedita facilis reprehenderit voluptas dolorum explicabo iste dolor unde? Repudiandae commodi sapiente fugiat.</p>
+                </div>
+                <div class="img-itens">
+                    <img src="src/images/quarto1.jpg" alt="Quarto 1">
+                </div>
+            </article>
+
+            <article class="itens-container" id="item-container-2">
+                <div class="txt-itens">
+                    <h2>Com o melhor <span>conforto</span></h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dolorum quidem rerum. Dolores vitae ratione perferendis reiciendis quaerat, repellat rem mollitia reprehenderit nostrum nobis, fugit est? Libero quidem delectus aliquid!</p>
+                </div>
+                <div class="img-itens">
+                    <img src="src/images/quarto2.jpg" alt="Quarto 2">
+                </div>
+            </article>
+
+            <article class="itens-container">
+                <div class="txt-itens">
+                    <h2>Você é a <span>prioridade</span></h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis fugit corporis quidem itaque aut ducimus aliquid magni earum iste pariatur reprehenderit natus adipisci quia hic illum omnis alias, voluptatibus placeat?</p>
+                </div>
+                <div class="img-itens">
+                    <img src="src/images/quarto3.jpg" alt="Quarto 3">
+                </div>
+            </article>
 
         </div>
 
