fix: Correcao de texto

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
         <div class="interface">
 
-            <article class="itens-container">
+            <article class="itens-container" id="item-container-1">
                 <div class="txt-itens">
-                    <h2>Os melhores <span>quartos</span></h2>
+                    <h2>Os <span>melhores <br>quartos</span></h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum enim labore a fuga voluptate iure harum molestiae, expedita facilis reprehenderit voluptas dolorum explicabo iste dolor unde? Repudiandae commodi sapiente fugiat.</p>
                 </div>
                 <div class="img-itens">
@@ -90,7 +90,7 @@
 
             <article class="itens-container" id="item-container-2">
                 <div class="txt-itens">
-                    <h2>Com o melhor <span>conforto</span></h2>
+                    <h2>Com o <span>melhor <br> conforto</span></h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dolorum quidem rerum. Dolores vitae ratione perferendis reiciendis quaerat, repellat rem mollitia reprehenderit nostrum nobis, fugit est? Libero quidem delectus aliquid!</p>
                 </div>
                 <div class="img-itens">
