--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- /Google Fonts -->
 
+    <!-- Bootstrap Icons -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <!-- /Bootstrap Icons -->
+
     <!-- Script -->
     <script src="src/javascript/index.js" defer></script>
     <!-- /Script -->
@@ -35,7 +39,7 @@
                         <li><a href="#sobre">Sobre</a></li>
                         <li><a href="#quartos">Quartos</a></li>
                         <li><a href="#servicos">Serviços</a></li>
-                        <li><a href="#">Contato</a></li>
+                        <li><a href="#contato">Contato</a></li>
                     </ul>
                 </nav>
             </section>
@@ -164,6 +168,62 @@
                     </div>
                 </div>
 
+            </div>
+
+        </div>
+
+    </section>
+
+    <section class="contato" id="contato">
+
+        <div class="interface">
+
+            <div class="contato-container">
+                <h1>Fale <span>conosco!</span></h1>
+
+                <div class="formas-contato">
+
+                    <ul>
+
+                        <li class="box-contato">
+                            <a href="#">
+                                <button>
+                                    <i class="bi bi-whatsapp"></i>
+                                    <p>Chamar no Whatsapp</p>
+                                </button>
+                            </a>
+                        </li>
+
+                        <li class="box-contato">
+                            <a href="#">
+                                <button>
+                                    <i class="bi bi-envelope-at-fill"></i>
+                                    <p>Enviar E-mail</p>
+                                </button>
+                            </a>
+                        </li>
+
+                        <li class="box-contato">
+                            <a href="#">
+                                <button>
+                                    <i class="bi bi-instagram"></i>
+                                    <p>Envie um direct no Instagram</p>
+                                </button>
+                            </a>
+                        </li>
+
+                        <li class="box-contato">
+                            <a href="#">
+                                <button>
+                                    <i class="bi bi-telephone-fill"></i>
+                                    <p>Ligue para nós</p>
+                                </button>
+                            </a>
+                        </li>
+
+                    </ul>
+
+                </div>
             </div>
 
         </div>
