--- a/index.html
+++ b/index.html
@@ -229,5 +229,31 @@
         </div>
 
     </section>
+
+    <footer>
+
+        <div class="interface">
+
+            <section class="top-footer">
+
+                <div class="redes-sociais">
+
+                    <a href="#"><button><i class="bi bi-instagram"></i></button></a>
+                    <a href="#"><button><i class="bi bi-twitter-x"></i></button></a>
+                    <a href="#"><button><i class="bi bi-tiktok"></i></button></a>
+
+                </div>
+
+            </section>
+
+            <section class="bottom-footer">
+                <a href="#">Suporte</a>
+                <a href="#">Informações</a>
+                <a href="#">Marketing</a>
+            </section>
+
+        </div>
+
+    </footer>
 </body>
 </html>
