--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum enim labore a fuga voluptate iure harum molestiae, expedita facilis reprehenderit voluptas dolorum explicabo iste dolor unde? Repudiandae commodi sapiente fugiat.</p>
                 </div>
                 <div class="img-itens">
-                    <img src="src/images/quarto1.jpg" alt="Quarto 1">
+                    <img src="src/images/quarto1-redimensionada.jpg" alt="Quarto 1">
                 </div>
             </article>
 
@@ -98,7 +98,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dolorum quidem rerum. Dolores vitae ratione perferendis reiciendis quaerat, repellat rem mollitia reprehenderit nostrum nobis, fugit est? Libero quidem delectus aliquid!</p>
                 </div>
                 <div class="img-itens">
-                    <img src="src/images/quarto2.jpg" alt="Quarto 2">
+                    <img src="src/images/quarto2-redimensionada.jpg" alt="Quarto 2">
                 </div>
             </article>
 
@@ -108,7 +108,7 @@
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis fugit corporis quidem itaque aut ducimus aliquid magni earum iste pariatur reprehenderit natus adipisci quia hic illum omnis alias, voluptatibus placeat?</p>
                 </div>
                 <div class="img-itens">
-                    <img src="src/images/quarto3.jpg" alt="Quarto 3">
+                    <img src="src/images/quarto3-redimensionada.jpg" alt="Quarto 3">
                 </div>
             </article>
 
