Menu desktop dinamico

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <!-- /Bootstrap Icons -->
 
     <!-- Script -->
-    <script src="src/javascript/index.js" defer></script>
+    <script src="src/javascript/navbar.js" defer></script>
     <!-- /Script -->
 
     <title>Projeto Pousada</title>
 </head>
 <body>
-    <header>
+    <header id="header">
 
         <div class="interface">
 
