--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="shortcut icon" href="src/images/icon.png" type="image/x-icon">
 
+    <!-- Responsivo -->
+     <link rel="stylesheet" href="src/css/responsive.css" media="screen">
+    <!-- /Responsivo -->
+
     <!-- Google Fonts -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
