Menu mobile e Fim do Projeto

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <!-- Script -->
     <script src="src/javascript/navbar.js" defer></script>
+    <script src="src/javascript/menu-mobile.js" defer></script>
     <!-- /Script -->
 
     <title>Projeto Pousada</title>
@@ -32,7 +33,6 @@
         <div class="interface">
 
             <section class="logo">
-                <!-- <img src="src/images/icon-logo-white.png" alt=""> -->
                 <a href="#hero-site">LOGO</a>
             </section>
 
@@ -46,6 +46,24 @@
                         <li><a href="#contato">Contato</a></li>
                     </ul>
                 </nav>
+            </section>
+
+            <section class="menu-mobile">
+                <nav>
+                    <ul>
+                        <li><a href="#hero-site">Início</a></li>
+                        <li><a href="#sobre">Sobre</a></li>
+                        <li><a href="#quartos">Quartos</a></li>
+                        <li><a href="#servicos">Serviços</a></li>
+                        <li><a href="#contato">Contato</a></li>
+                        <li><a href="#">Reservar</a></li>
+                    </ul>
+                </nav>
+            </section>
+
+            <section class="btn-menu-mobile">
+                <i class="bi bi-list" id="open-menu"></i>
+                <i class="bi bi-x-lg" id="close-menu"></i>
             </section>
 
             <section class="btn-reservar">
